--- a/packages/runtime/runtime-definitions/package.json
+++ b/packages/runtime/runtime-definitions/package.json
@@ -93,11 +93,49 @@
 	},
 	"typeValidation": {
 		"broken": {
-			"InterfaceDeclaration_IIdCompressorCore": {
-				"forwardCompat": false
+			"RemovedInterfaceDeclaration_IIdCompressorCore": {
+				"forwardCompat": false,
+				"backCompat": false
 			},
-			"ClassDeclaration_IdCompressor": {
-				"forwardCompat": false
+			"RemovedClassDeclaration_IdCompressor": {
+				"forwardCompat": false,
+				"backCompat": false
+			},
+			"RemovedInterfaceDeclaration_IIdCompressor": {
+				"forwardCompat": false,
+				"backCompat": false
+			},
+			"RemovedInterfaceDeclaration_IdCreationRange": {
+				"forwardCompat": false,
+				"backCompat": false
+			},
+			"RemovedTypeAliasDeclaration_OpSpaceCompressedId": {
+				"forwardCompat": false,
+				"backCompat": false
+			},
+			"RemovedTypeAliasDeclaration_SerializedIdCompressor": {
+				"forwardCompat": false,
+				"backCompat": false
+			},
+			"RemovedTypeAliasDeclaration_SerializedIdCompressorWithNoSession": {
+				"forwardCompat": false,
+				"backCompat": false
+			},
+			"RemovedTypeAliasDeclaration_SerializedIdCompressorWithOngoingSession": {
+				"forwardCompat": false,
+				"backCompat": false
+			},
+			"RemovedTypeAliasDeclaration_SessionId": {
+				"forwardCompat": false,
+				"backCompat": false
+			},
+			"RemovedTypeAliasDeclaration_SessionSpaceCompressedId": {
+				"forwardCompat": false,
+				"backCompat": false
+			},
+			"RemovedTypeAliasDeclaration_StableId": {
+				"forwardCompat": false,
+				"backCompat": false
 			}
 		}
 	}
