build(docs): Extract `build:redirects` into its own npm step, rather than running with `build:api-documentation` (#19061)
Separates concerns and resolves a potential race condition between the
redirects build and the API docs build.

--- a/docs/package.json
+++ b/docs/package.json
@@ -12,7 +12,7 @@
 	"license": "MIT",
 	"author": "Microsoft and contributors",
 	"scripts": {
-		"build": "concurrently npm:build:api-documentation npm:build:md-magic && npm run hugo",
+		"build": "concurrently npm:build:api-documentation npm:build:md-magic npm:build:redirects && npm run hugo",
 		"build:api": "npm run build:api-documentation",
 		"build:api-documentation": "node ./api-markdown-documenter/index.js",
 		"build:api-documentation:multi-version": "node ./api-markdown-documenter/index.js true",
@@ -20,9 +20,10 @@
 		"build:md-magic:code": "markdown-magic --files \"**/*.md\" !docs --workingDirectory ..",
 		"build:md-magic:website": "markdown-magic",
 		"build:multi-version": "concurrently npm:build:api-documentation:multi-version npm:build:md-magic && npm run hugo",
+		"build:redirects": "node ./build-redirects.js",
 		"build:repo-docs": "npm run build:md-magic:code",
-		"build:website": "concurrently npm:build:md-magic:website npm:build:api-documentation && npm run hugo",
-		"build:website:multi-version": "concurrently npm:build:md-magic:website npm:build:api-documentation:multi-version && npm run hugo",
+		"build:website": "concurrently npm:build:api-documentation npm:build:md-magic:website npm:build:redirects && npm run hugo",
+		"build:website:multi-version": "concurrently npm:build:api-documentation:multi-version npm:build:md-magic:website npm:build:redirects && npm run hugo",
 		"ci:build": "npm run download && npm run build",
 		"ci:linkcheck": "start-server-and-test ci:start http://localhost:1313 linkcheck:full",
 		"ci:start": "http-server ./public --port 1313 --silent",
