--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,9 +4,9 @@
 # Guidelines for updating this file:
 #
 # 1. Keep the entries alphabetical wherever possible.
-# 2. DO NOT end a glob with "**". E.g. "packages/**". Doing so can include unexpected packages. This is especially true
-#    of packages for which we build ESM and CJS. Such packages sometimes have package.json files in their source or
-#    output directories during compilation.
+# 2. Be carefule when using globs that end with "**". E.g. "packages/**". Doing so can include unexpected packages. This
+#    is especially true of packages for which we build ESM and CJS. Such packages sometimes have package.json files in
+#    their source or output directories during compilation.
 
 packages:
   - "azure/packages/**"
