--- a/.prettierignore
+++ b/.prettierignore
@@ -96,6 +96,9 @@ docs/themes/thxvscode/assets/js/bundle.js
 docs/themes/thxvscode/assets/scss/*
 
 # Generated
+docs/data/v*
+docs/public
+docs/resources
 docs/static/staticwebapp.config.json
 
 # This is a test file
