--- a/.prettierignore
+++ b/.prettierignore
@@ -95,6 +95,12 @@ docs/themes/thxvscode/assets/js/bundle.js
 # Ignore these scss files
 docs/themes/thxvscode/assets/scss/*
 
+# Generated
+docs/data/v*
+docs/public
+docs/resources
+docs/static/staticwebapp.config.json
+
 # This is a test file
 tools/markdown-magic/test/include.md
 
