--- a/server/gitrest/pnpm-workspace.yaml
+++ b/server/gitrest/pnpm-workspace.yaml
@@ -1,4 +1,4 @@
-# This is the workspace definition for the client release group. See https://pnpm.io/pnpm-workspace_yaml for more
+# This is the workspace definition for the gitrest release group. See https://pnpm.io/pnpm-workspace_yaml for more
 # information about the format.
 #
 # Guidelines for updating this file:
