--- a/server/routerlicious/pnpm-workspace.yaml
+++ b/server/routerlicious/pnpm-workspace.yaml
@@ -1,5 +1,5 @@
-# This is the workspace definition for the client release group. See https://pnpm.io/pnpm-workspace_yaml for more
-# information about the format.
+# This is the workspace definition for the server (routerlicious) release group. See https://pnpm.io/pnpm-workspace_yaml
+# for more information about the format.
 #
 # Guidelines for updating this file:
 #
