--- a/common/lib/common-utils/package.json
+++ b/common/lib/common-utils/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@fluidframework/common-utils",
-	"version": "3.0.0",
+	"version": "3.1.0",
 	"description": "Collection of utility functions for Fluid",
 	"homepage": "https://fluidframework.com",
 	"repository": {
@@ -76,7 +76,7 @@
 		"temp-directory": "nyc/.nyc_output"
 	},
 	"dependencies": {
-		"@fluidframework/common-definitions": "^1.1.0-220319",
+		"@fluidframework/common-definitions": "^1.1.0",
 		"@types/events": "^3.0.0",
 		"base64-js": "^1.5.1",
 		"buffer": "^6.0.3",
