Add more granular summary write metrics

--- a/server/gitrest/packages/gitrest/config.json
+++ b/server/gitrest/packages/gitrest/config.json
@@ -6,6 +6,12 @@
 		"level": "info",
 		"timestamp": true
 	},
+	"lumberjack": {
+		"options": {
+			"enableGlobalTelemetryContext": true,
+			"enableSanitization": false
+		}
+	},
 	"config": {
 		"configDumpEnabled": false,
 		"secretNamesToRedactInConfigDump": [
