--- a/server/charts/historian/templates/historian-configmap.yaml
+++ b/server/charts/historian/templates/historian-configmap.yaml
@@ -20,6 +20,7 @@ data:
         },
         "lumberjack": {
             "options": {
+                "enableGlobalTelemetryContext": {{ .Values.lumberjack.options.enableGlobalTelemetryContext }},
                 "enableSanitization": {{ .Values.lumberjack.options.enableSanitization }}
             }
         },
