build(server): Bump common deps in server (#19090)
Updated the following:

server (release group)

Dependencies on packages updated:

@fluidframework/common-definitions: 1.1.0
@fluidframework/common-utils: 3.1.0
@fluidframework/protocol-definitions: 3.1.0

--- a/server/routerlicious/packages/local-server/package.json
+++ b/server/routerlicious/packages/local-server/package.json
@@ -57,8 +57,8 @@
 		"temp-directory": "nyc/.nyc_output"
 	},
 	"dependencies": {
-		"@fluidframework/common-utils": "^3.0.0-223006",
-		"@fluidframework/protocol-definitions": "^3.1.0-223007",
+		"@fluidframework/common-utils": "^3.1.0",
+		"@fluidframework/protocol-definitions": "^3.1.0",
 		"@fluidframework/server-lambdas": "workspace:~",
 		"@fluidframework/server-memory-orderer": "workspace:~",
 		"@fluidframework/server-services-client": "workspace:~",
