--- a/server/routerlicious/packages/services/package.json
+++ b/server/routerlicious/packages/services/package.json
@@ -51,8 +51,8 @@
 		"temp-directory": "nyc/.nyc_output"
 	},
 	"dependencies": {
-		"@fluidframework/common-utils": "^3.0.0-223006",
-		"@fluidframework/protocol-definitions": "^3.1.0-223007",
+		"@fluidframework/common-utils": "^3.1.0",
+		"@fluidframework/protocol-definitions": "^3.1.0",
 		"@fluidframework/server-services-client": "workspace:~",
 		"@fluidframework/server-services-core": "workspace:~",
 		"@fluidframework/server-services-ordering-kafkanode": "workspace:~",
