--- a/packages/tools/devtools/devtools-core/tsconfig.json
+++ b/packages/tools/devtools/devtools-core/tsconfig.json
@@ -1,11 +1,13 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../../common/build/build-common/tsconfig.base.json",
+		"../../../../common/build/build-common/tsconfig.cjs.json",
+	],
+	"include": ["src/**/*"],
 	"compilerOptions": {
 		"rootDir": "src",
 		"outDir": "dist",
-		"composite": true,
 		"target": "es6",
 		"types": ["chai", "mocha"],
 	},
-	"include": ["src/**/*"],
 }
