--- a/packages/tools/devtools/devtools-view/tsconfig.json
+++ b/packages/tools/devtools/devtools-view/tsconfig.json
@@ -1,13 +1,12 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../../common/build/build-common/tsconfig.base.json",
+		"../../../../common/build/build-common/tsconfig.esm-only.json",
+	],
+	"include": ["src/**/*"],
 	"compilerOptions": {
-		"module": "esnext",
-		"lib": ["ESNext", "DOM"],
 		"rootDir": "src",
 		"outDir": "dist",
-		"composite": true,
-		"jsx": "react",
 		"skipLibCheck": true,
 	},
-	"include": ["src/**/*"],
 }
