--- a/packages/tools/devtools/devtools-example/package.json
+++ b/packages/tools/devtools/devtools-example/package.json
@@ -26,7 +26,7 @@
 		"prettier": "prettier --check . --cache --ignore-path ../../../../.prettierignore",
 		"prettier:fix": "prettier --write . --cache --ignore-path ../../../../.prettierignore",
 		"rebuild": "npm run clean && npm run build",
-		"start": "concurrently npm:watch:* npm:start:client",
+		"start": "concurrently \"npm:watch:*\" npm:start:client",
 		"start:client": "webpack serve --config webpack.config.js",
 		"test": "npm run test:jest",
 		"test:coverage": "npm run test:jest:coverage",
