build(devtools-example): Fix start script (#19097)
The start `script` was incorrectly configured in terms of the
`concurrently` library we're using to run tasks in parallel. The fix is
to remove the `&&`s between each subtask.
- See docs on `concurrently` usage
[here](https://www.npmjs.com/package/concurrently#usage)

Additionally, the `devtools-example` package doesn't use the `devtools`
package at all, so that dependency was removed and the corresponding
`watch` task was removed as well.

AB#6750

--- a/packages/tools/devtools/devtools-example/package.json
+++ b/packages/tools/devtools/devtools-example/package.json
@@ -26,7 +26,7 @@
 		"prettier": "prettier --check . --cache --ignore-path ../../../../.prettierignore",
 		"prettier:fix": "prettier --write . --cache --ignore-path ../../../../.prettierignore",
 		"rebuild": "npm run clean && npm run build",
-		"start": "concurrently npm:watch:devtools && npm:watch:devtools-core && npm:watch:devtools-view && npm:start:client",
+		"start": "concurrently \"npm:watch:*\" npm:start:client",
 		"start:client": "webpack serve --config webpack.config.js",
 		"test": "npm run test:jest",
 		"test:coverage": "npm run test:jest:coverage",
@@ -34,7 +34,6 @@
 		"test:jest:coverage": "jest --detectOpenHandles --coverage --ci",
 		"tsc": "tsc",
 		"tsc:watch": "tsc --watch",
-		"watch:devtools": "tsc --watch --project ../devtools/tsconfig.json --preserveWatchOutput",
 		"watch:devtools-core": "tsc --watch --project ../devtools-core/tsconfig.json --preserveWatchOutput",
 		"watch:devtools-view": "tsc --watch --project ../devtools-view/tsconfig.json --preserveWatchOutput",
 		"webpack": "webpack --env production",
@@ -55,7 +54,6 @@
 		"@fluidframework/core-interfaces": "workspace:~",
 		"@fluidframework/counter": "workspace:~",
 		"@fluidframework/datastore-definitions": "workspace:~",
-		"@fluidframework/devtools": "workspace:~",
 		"@fluidframework/devtools-core": "workspace:~",
 		"@fluidframework/driver-definitions": "workspace:~",
 		"@fluidframework/fluid-static": "workspace:~",
