Update deps (latest) on server release group in the client release group
Updated the following:

  client (release group)

Dependencies on server updated:

  @fluidframework/gitresources: 3.0.0
  @fluidframework/server-kafka-orderer: 3.0.0
  @fluidframework/server-lambdas: 3.0.0
  @fluidframework/server-lambdas-driver: 3.0.0
  @fluidframework/server-local-server: 3.0.0
  @fluidframework/server-memory-orderer: 3.0.0
  @fluidframework/protocol-base: 3.0.0
  @fluidframework/server-routerlicious: 3.0.0
  @fluidframework/server-routerlicious-base: 3.0.0
  @fluidframework/server-services: 3.0.0
  @fluidframework/server-services-client: 3.0.0
  @fluidframework/server-services-core: 3.0.0
  @fluidframework/server-services-ordering-kafkanode: 3.0.0
  @fluidframework/server-services-ordering-rdkafka: 3.0.0
  @fluidframework/server-services-ordering-zookeeper: 3.0.0
  @fluidframework/server-services-shared: 3.0.0
  @fluidframework/server-services-telemetry: 3.0.0
  @fluidframework/server-services-utils: 3.0.0
  @fluidframework/server-test-utils: 3.0.0
  tinylicious: 3.0.0

--- a/packages/tools/webpack-fluid-loader/package.json
+++ b/packages/tools/webpack-fluid-loader/package.json
@@ -88,7 +88,7 @@
 		"@fluidframework/protocol-definitions": "^3.1.0-223007",
 		"@fluidframework/routerlicious-driver": "workspace:~",
 		"@fluidframework/runtime-utils": "workspace:~",
-		"@fluidframework/server-local-server": "^3.0.0-223236",
+		"@fluidframework/server-local-server": "^3.0.0",
 		"@fluidframework/telemetry-utils": "workspace:~",
 		"@fluidframework/test-runtime-utils": "workspace:~",
 		"@fluidframework/tool-utils": "workspace:~",
