--- a/packages/drivers/local-driver/package.json
+++ b/packages/drivers/local-driver/package.json
@@ -124,13 +124,13 @@
 		"@fluidframework/driver-base": "workspace:~",
 		"@fluidframework/driver-definitions": "workspace:~",
 		"@fluidframework/driver-utils": "workspace:~",
-		"@fluidframework/protocol-base": "^3.0.0-223236",
+		"@fluidframework/protocol-base": "^3.0.0",
 		"@fluidframework/protocol-definitions": "^3.1.0-223007",
 		"@fluidframework/routerlicious-driver": "workspace:~",
-		"@fluidframework/server-local-server": "^3.0.0-223236",
-		"@fluidframework/server-services-client": "^3.0.0-223236",
-		"@fluidframework/server-services-core": "^3.0.0-223236",
-		"@fluidframework/server-test-utils": "^3.0.0-223236",
+		"@fluidframework/server-local-server": "^3.0.0",
+		"@fluidframework/server-services-client": "^3.0.0",
+		"@fluidframework/server-services-core": "^3.0.0",
+		"@fluidframework/server-test-utils": "^3.0.0",
 		"@fluidframework/telemetry-utils": "workspace:~",
 		"events": "^3.1.0",
 		"jsrsasign": "^10.5.25",
