--- a/packages/loader/container-loader/package.json
+++ b/packages/loader/container-loader/package.json
@@ -174,7 +174,7 @@
 		"@fluidframework/core-utils": "workspace:~",
 		"@fluidframework/driver-definitions": "workspace:~",
 		"@fluidframework/driver-utils": "workspace:~",
-		"@fluidframework/protocol-base": "^3.0.0-223236",
+		"@fluidframework/protocol-base": "^3.0.0",
 		"@fluidframework/protocol-definitions": "^3.1.0-223007",
 		"@fluidframework/telemetry-utils": "workspace:~",
 		"debug": "^4.3.4",
