--- a/examples/service-clients/azure-client/external-controller/tsconfig.json
+++ b/examples/service-clients/azure-client/external-controller/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"extends": [
-		"../../../common/build/build-common/tsconfig.base.json",
-		"../../../common/build/build-common/tsconfig.cjs.json",
+		"../../../../common/build/build-common/tsconfig.base.json",
+		"../../../../common/build/build-common/tsconfig.cjs.json",
 	],
 	"exclude": ["dist", "node_modules"],
 	"compilerOptions": {
