--- a/packages/service-clients/azure-client/tsconfig.json
+++ b/packages/service-clients/azure-client/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"extends": [
-		"../../../common/build/build-common/tsconfig.base.json",
-		"../../../common/build/build-common/tsconfig.cjs.json",
+		"../../../../common/build/build-common/tsconfig.base.json",
+		"../../../../common/build/build-common/tsconfig.cjs.json",
 	],
 	"include": ["src/**/*"],
 	"exclude": ["src/test/**/*"],
