--- a/docs/package.json
+++ b/docs/package.json
@@ -12,18 +12,17 @@
 	"license": "MIT",
 	"author": "Microsoft and contributors",
 	"scripts": {
-		"build": "concurrently npm:build:api-documentation npm:build:md-magic npm:build:redirects && npm run hugo",
-		"build:api": "npm run build:api-documentation",
+		"build": "concurrently npm:build:api npm:build:md-magic npm:build:redirects && npm run hugo",
+		"build:api": "npm run download:api && npm run build:api-documentation",
 		"build:api-documentation": "node ./api-markdown-documenter/index.js",
 		"build:md-magic": "markdown-magic",
 		"build:md-magic:code": "markdown-magic --files \"**/*.md\" !docs --workingDirectory ..",
 		"build:redirects": "node ./build-redirects.js",
 		"build:repo-docs": "npm run build:md-magic:code",
-		"ci:build": "npm run download && npm run build",
+		"ci:build": "npm run build",
 		"ci:linkcheck": "start-server-and-test ci:start http://localhost:1313 linkcheck:full",
 		"ci:start": "http-server ./public --port 1313 --silent",
 		"clean": "rimraf --glob public content/docs/api _api-extractor-temp",
-		"download": "npm run download:api && npm run build:api",
 		"download:api": "node ./download-apis.js",
 		"format": "npm run prettier:fix",
 		"hugo": "hugo",
