build(docs): Enable dynamic wildcard redirects on FF.com

--- a/docs/static/staticwebapp.config.json
+++ b/docs/static/staticwebapp.config.json
@@ -8,5 +8,11 @@
   ],
   "globalHeaders": {
     "cache-control": "must-revalidate, max-age=3600"
+  },
+  "navigationFallback": {
+    "rewrite": "/api/fallback"
+  },
+  "platform": {
+    "apiRuntime": "node:18"
   }
 }
