build(client-tree): full ESM build

--- a/packages/dds/tree/tsconfig.esnext.json
+++ b/packages/dds/tree/tsconfig.esnext.json
@@ -2,6 +2,7 @@
 	"extends": "./tsconfig.base.json",
 	"compilerOptions": {
 		"outDir": "./lib",
-		"module": "esnext",
+		"module": "Node16",
+		"moduleResolution": "Node16",
 	},
 }
