build(client-tree): fix api report/rollup make sure cjs rollup uses cjs config override moduleResolution for esm as api-extractor doesn't handle node16 robustly. It will generate with imports to invalid paths.

--- a/packages/dds/tree/package.json
+++ b/packages/dds/tree/package.json
@@ -153,7 +153,13 @@
 	},
 	"fluidBuild": {
 		"tasks": {
-			"build:docs": [
+			"build:docs": {
+				"dependsOn": [
+					"build:esnext"
+				],
+				"script": false
+			},
+			"check:release-tags": [
 				"build:esnext"
 			],
 			"ci:build:docs": [
