--- a/docs/config.yml
+++ b/docs/config.yml
@@ -59,7 +59,7 @@ params:
   githubRepo: "microsoft/FluidFramework"
   twitterHandle: "fluidframework"
   banner:
-    showBanner: true # show or hide the banner completely
+    showBanner: false # show or hide the banner completely
     bannerClose: false # show or hide the close button on the banner
     version: "0.50"
     urlRef: "docs/updates/v0.50.md"
