--- a/docs/config.yml
+++ b/docs/config.yml
@@ -59,12 +59,12 @@ params:
   githubRepo: "microsoft/FluidFramework"
   twitterHandle: "fluidframework"
   banner:
-    showBanner: false # show or hide the banner completely
+    showBanner: true # show or hide the banner completely
     bannerClose: false # show or hide the close button on the banner
     version: "0.50"
     urlRef: "docs/updates/v0.50.md"
     message: | # if set, this will override the release notes updates
-      Fluid Framework 2.0 beta is available now! [Learn more.](/blogs/)
+      Fluid Framework 2.0 beta is available now! <a href="https://devblogs.microsoft.com/microsoft365dev/announcing-fluid-framework-2-0-beta/"> Learn more.</a>
 
 menu:
   main:
