--- a/tools/pipelines/test-real-service.yml
+++ b/tools/pipelines/test-real-service.yml
@@ -159,8 +159,10 @@ stages:
           - name: Cross-Version
             flags: --compatVersion=CROSS_VERSION
           # Assumes Non-compat and N-1 scenarios are covered
+          # Tests N-2 to LTS+1 back compat for loader
+          # Tests N-2 to LTS+3 back compat for loader + driver
           - name: N-2ToLTS+1-back-compat
-            flags: --compatVersion=FULL --tenantIndex=3
+            flags: --compatVersion=V2_INT_1_Loader_V2_INT_3_Driver --tenantIndex=3
         env:
           login__microsoft__clientId: $(login-microsoft-clientId)
           login__microsoft__secret: $(login-microsoft-secret)
