--- a/server/routerlicious/packages/routerlicious-base/package.json
+++ b/server/routerlicious/packages/routerlicious-base/package.json
@@ -138,6 +138,9 @@
 			},
 			"InterfaceDeclaration_IAlfredResourcesCustomizations": {
 				"forwardCompat": false
+			},
+			"ClassDeclaration_AlfredResources": {
+				"backCompat": false
 			}
 		}
 	}
