--- a/packages/drivers/driver-base/package.json
+++ b/packages/drivers/driver-base/package.json
@@ -167,10 +167,6 @@
 		}
 	},
 	"typeValidation": {
-		"broken": {
-			"ClassDeclaration_DocumentDeltaConnection": {
-				"forwardCompat": false
-			}
-		}
+		"broken": {}
 	}
 }
