--- a/packages/drivers/replay-driver/package.json
+++ b/packages/drivers/replay-driver/package.json
@@ -133,6 +133,10 @@
 		}
 	},
 	"typeValidation": {
-		"broken": {}
+		"broken": {
+			"ClassDeclaration_ReplayDocumentService": {
+				"forwardCompat": false
+			}
+		}
 	}
 }
