--- a/packages/loader/container-loader/package.json
+++ b/packages/loader/container-loader/package.json
@@ -226,6 +226,10 @@
 		}
 	},
 	"typeValidation": {
-		"broken": {}
+		"broken": {
+			"InterfaceDeclaration_IContainerExperimental": {
+				"forwardCompat": false
+			}
+		}
 	}
 }
