build: Update API-Extractor infra in api-markdown-documenter

--- a/tools/api-markdown-documenter/package.json
+++ b/tools/api-markdown-documenter/package.json
@@ -14,12 +14,14 @@
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
+		"api": "fluid-build . --task api",
 		"build": "concurrently npm:build:compile npm:lint && npm run build:readme && npm run build:docs",
 		"build-and-test": "npm run build && npm run test",
 		"build:compile": "npm run tsc",
 		"build:docs": "api-extractor run --local && copyfiles -u 1 \"./_api-extractor-temp/doc-models/*\" ../../_api-extractor-temp/",
 		"build:readme": "markdown-magic --files \"**/*.md\"",
 		"build:tsc": "npm run tsc",
+		"check:release-tags": "api-extractor run --local --config ./api-extractor-lint.json",
 		"ci:build:docs": "api-extractor run && copyfiles -u 1 \"./_api-extractor-temp/doc-models/*\" ../../_api-extractor-temp/",
 		"clean": "rimraf --glob _api-extractor-temp nyc dist \"**/*.tsbuildinfo\" \"**/*.build.log\"",
 		"eslint": "eslint src",
