--- a/experimental/dds/ephemeral-independent/tsconfig.json
+++ b/experimental/dds/ephemeral-independent/tsconfig.json
@@ -1,12 +1,3 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
-	"exclude": ["dist", "node_modules"],
-	"compilerOptions": {
-		"module": "esnext",
-		"rootDir": "./src",
-		"outDir": "./dist",
-		"composite": true,
-		"types": ["node"],
-	},
-	"include": ["src/**/*"],
+	"extends": "./tsconfig.esm.json",
 }
