Update r11s deps in Historian and Gitrest

--- a/server/gitrest/packages/gitrest/config.json
+++ b/server/gitrest/packages/gitrest/config.json
@@ -24,6 +24,7 @@
 		]
 	},
 	"requestSizeLimit": "1gb",
+	"enableResponseCloseLatencyMetric": true,
 	"storageDir": {
 		"baseDir": "/home/node/documents",
 		"useRepoOwner": true
