--- a/server/gitrest/packages/gitrest-base/package.json
+++ b/server/gitrest/packages/gitrest-base/package.json
@@ -52,14 +52,14 @@
 	},
 	"dependencies": {
 		"@fluidframework/common-utils": "^1.1.1",
-		"@fluidframework/gitresources": "^3.0.0-211732",
-		"@fluidframework/protocol-base": "^3.0.0-211732",
+		"@fluidframework/gitresources": "^3.0.0",
+		"@fluidframework/protocol-base": "^3.0.0",
 		"@fluidframework/protocol-definitions": "^1.1.0",
-		"@fluidframework/server-services-client": "^3.0.0-211732",
-		"@fluidframework/server-services-core": "^3.0.0-211732",
-		"@fluidframework/server-services-shared": "^3.0.0-211732",
-		"@fluidframework/server-services-telemetry": "^3.0.0-211732",
-		"@fluidframework/server-services-utils": "^3.0.0-211732",
+		"@fluidframework/server-services-client": "^3.0.0",
+		"@fluidframework/server-services-core": "^3.0.0",
+		"@fluidframework/server-services-shared": "^3.0.0",
+		"@fluidframework/server-services-telemetry": "^3.0.0",
+		"@fluidframework/server-services-utils": "^3.0.0",
 		"async-mutex": "^0.3.2",
 		"axios": "^1.6.2",
 		"body-parser": "^1.17.2",
