remove unnecessary weighted distributions

--- a/examples/benchmarks/tablebench/tsconfig.json
+++ b/examples/benchmarks/tablebench/tsconfig.json
@@ -4,6 +4,7 @@
 	"compilerOptions": {
 		"rootDir": "./src",
 		"outDir": "./dist",
+		"composite": true,
 		"noImplicitAny": true,
 		"noImplicitOverride": true,
 	},
