server: update r11s deps in Gitrest & Historian (#19201)
## Description

Updating R11s deps in Gitrest and Historian so that we can use new
metrics introduced in #15139.

--- a/server/charts/historian/templates/gitrest-configmap.yaml
+++ b/server/charts/historian/templates/gitrest-configmap.yaml
@@ -34,6 +34,7 @@ data:
             ]
         },
         "requestSizeLimit": "1gb",
+	    "enableResponseCloseLatencyMetric": {{ .Values.gitrest.enableResponseCloseLatencyMetric }},
         "storageDir": {
             "baseDir": "/home/node/documents",
             "useRepoOwner": true
