--- a/docs/package.json
+++ b/docs/package.json
@@ -12,12 +12,11 @@
 	"license": "MIT",
 	"author": "Microsoft and contributors",
 	"scripts": {
-		"build": "concurrently npm:build:api npm:build:md-magic npm:build:redirects && npm run hugo",
+		"build": "concurrently npm:build:api npm:build:md-magic && npm run hugo",
 		"build:api": "npm run download:api && npm run build:api-documentation",
 		"build:api-documentation": "node ./api-markdown-documenter/index.js",
 		"build:md-magic": "markdown-magic",
 		"build:md-magic:code": "markdown-magic --files \"**/*.md\" !docs --workingDirectory ..",
-		"build:redirects": "node ./build-redirects.js",
 		"build:repo-docs": "npm run build:md-magic:code",
 		"ci:build": "npm run build",
 		"ci:linkcheck": "start-server-and-test ci:start http://localhost:1313 linkcheck:full",
@@ -87,5 +86,8 @@
 				"node-fetch"
 			]
 		}
+	},
+	"devDependencies": {
+		"@azure/static-web-apps-cli": "^1.1.6"
 	}
 }
