feat(build-tools): Add policy handler to ensure public packages have required api-extractor scripts and dependency (#18804)
Adds a policy check handler to ensure "public" packages (in this case
packages that are not marked with `"private": true` in their
package.json files) include certain api-extractor related scripts and a
dev dependency on api-extractor.

This PR also pre-applies fixes using the new handler.

---------

Co-authored-by: Alex Villarreal <716334+alexvy86@users.noreply.github.com>

--- a/packages/tools/fluid-runner/package.json
+++ b/packages/tools/fluid-runner/package.json
@@ -47,6 +47,7 @@
 		"build:docs": "fluid-build . --task api",
 		"build:test": "tsc --project ./src/test/tsconfig.json",
 		"check:are-the-types-wrong": "attw --pack . --entrypoints .",
+		"check:release-tags": "api-extractor run --local --config ./api-extractor-lint.json",
 		"ci:build:docs": "api-extractor run",
 		"clean": "rimraf --glob dist lib \"**/*.tsbuildinfo\" \"**/*.build.log\" nyc _api-extractor-temp",
 		"eslint": "eslint --format stylish src",
@@ -105,6 +106,7 @@
 		"@fluidframework/eslint-config-fluid": "^3.3.0",
 		"@fluidframework/fluid-runner-previous": "npm:@fluidframework/fluid-runner@2.0.0-internal.8.0.0",
 		"@fluidframework/mocha-test-setup": "workspace:~",
+		"@microsoft/api-extractor": "^7.38.3",
 		"@types/mocha": "^9.1.1",
 		"@types/node": "^18.19.0",
 		"@types/yargs": "^13",
