--- a/examples/data-objects/table-document/package.json
+++ b/examples/data-objects/table-document/package.json
@@ -72,6 +72,7 @@
 		"@fluidframework/runtime-utils": "workspace:~",
 		"@fluidframework/test-runtime-utils": "workspace:~",
 		"@fluidframework/test-utils": "workspace:~",
+		"@microsoft/api-extractor": "^7.38.3",
 		"@types/debug": "^4.1.5",
 		"@types/mocha": "^9.1.1",
 		"@types/node": "^18.19.0",
