--- a/server/gitrest/packages/gitrest/config.json
+++ b/server/gitrest/packages/gitrest/config.json
@@ -51,6 +51,7 @@
 		"enableOptimizedInitialSummary": false,
 		"enableSlimGitInit": false,
 		"enableRedisFsMetrics": true,
+		"enableHashmapRedisFs": false,
 		"redisApiMetricsSamplingPeriod": 0,
 		"enforceStrictPersistedFullSummaryReads": false
 	},
