--- a/server/charts/historian/values.yaml
+++ b/server/charts/historian/values.yaml
@@ -69,6 +69,7 @@ gitrest:
     enableOptimizedInitialSummary: false
     enableSlimGitInit: false
     enableRedisFsMetrics: false
+    enableHashmapRedisFs: false
     redisApiMetricsSamplingPeriod: 0
   redis:
     host: redis
